--- a/source/settingsunit.lfm
+++ b/source/settingsunit.lfm
@@ -8,7 +8,7 @@ object SettingsForm: TSettingsForm
   ClientWidth = 414
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
-  LCLVersion = '2.2.2.0'
+  LCLVersion = '2.2.6.0'
   object ToolBarLeft: TToolBar
     Left = 0
     Height = 36
@@ -49,7 +49,7 @@ object SettingsForm: TSettingsForm
     Align = alBottom
     DefaultColWidth = 200
     FixedCols = 0
-    RowCount = 6
+    RowCount = 7
     TabOrder = 2
     KeyOptions = [keyEdit, keyUnique]
     Strings.Strings = (
@@ -58,6 +58,7 @@ object SettingsForm: TSettingsForm
       'IFA Factor=0.8'
       'Precision=2'
       'Centre definition=Peak'
+      'Top Radius=2.5'
     )
     ColWidths = (
       200
