--- a/source/aboutunit.lfm
+++ b/source/aboutunit.lfm
@@ -1,18 +1,19 @@
 object AboutForm: TAboutForm
   Left = 2202
-  Height = 252
+  Height = 378
   Top = 112
-  Width = 430
+  Width = 645
   Caption = 'About'
-  ClientHeight = 252
-  ClientWidth = 430
+  ClientHeight = 378
+  ClientWidth = 645
+  DesignTimePPI = 144
   OnCreate = FormCreate
-  LCLVersion = '2.2.0.4'
+  LCLVersion = '2.2.6.0'
   object PageControl: TPageControl
     Left = 0
-    Height = 252
+    Height = 378
     Top = 0
-    Width = 430
+    Width = 645
     ActivePage = TabSheet1
     Align = alClient
     ParentFont = False
@@ -20,14 +21,14 @@ object AboutForm: TAboutForm
     TabOrder = 0
     object TabSheet1: TTabSheet
       Caption = 'About'
-      ClientHeight = 218
-      ClientWidth = 426
+      ClientHeight = 337
+      ClientWidth = 641
       ParentFont = False
       object mAbout: TMemo
         Left = 0
-        Height = 218
+        Height = 337
         Top = 0
-        Width = 426
+        Width = 641
         Align = alClient
         Font.Name = 'Monospace'
         ParentFont = False
@@ -37,14 +38,14 @@ object AboutForm: TAboutForm
     end
     object TabSheet2: TTabSheet
       Caption = 'Licence'
-      ClientHeight = 218
-      ClientWidth = 426
+      ClientHeight = 337
+      ClientWidth = 641
       ParentFont = False
       object mLicence: TMemo
         Left = 0
-        Height = 218
+        Height = 337
         Top = 0
-        Width = 426
+        Width = 641
         Align = alClient
         Font.Name = 'Monospace'
         ParentFont = False
@@ -54,14 +55,14 @@ object AboutForm: TAboutForm
     end
     object TabSheet3: TTabSheet
       Caption = 'Credits'
-      ClientHeight = 218
-      ClientWidth = 426
+      ClientHeight = 337
+      ClientWidth = 641
       ParentFont = False
       object mCredits: TMemo
         Left = 0
-        Height = 218
+        Height = 337
         Top = 0
-        Width = 426
+        Width = 641
         Align = alClient
         Font.Name = 'Monospace'
         ParentFont = False
